Fixed revapi issue